# vnm_terminal

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build_config.bat.example  build_portable.bat
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml
benchmarks/: CMakeLists.txt
benchmarks/cmdg_nelostie/: CMakeLists.txt  README.md  bound_confirmation_gate_report.md  run_bound_confirmation_gate.ps1  run_canonical_atlas_cmdg_gate.ps1  run_cmdg_nelostie.cmake  run_stage4_cmdg_gate.ps1
benchmarks/embedded_terminal/: CMakeLists.txt
cmake/: vnm_qml_chrome_dependency.cmake  vnm_terminal_build_info.cmake  vnm_terminal_build_info.h.in  vnm_terminal_cmake_script_helpers.cmake  vnm_terminal_generate_build_info.cmake  vnm_terminal_qt_posture.cmake  vnm_terminal_surface_dependency.cmake
docs/: README.md  architecture.md  debugging_knowledge.md  developer_orientation.md  llm_orientation.md  public_surface.md  repository_guide.md
examples/: CMakeLists.txt
examples/terminal_app/: CMakeLists.txt  frameless_resize_filter.cpp  frameless_resize_filter.h  main.cpp  terminal_scrollbar.cpp  terminal_scrollbar.h  vnm_terminal_example_terminal.rc  window_chrome.cpp  window_chrome.h  window_chrome_model.h
include/vnm_terminal/internal/: terminal_canvas_fixture_contract.h
src/: app_cli.cpp  app_cli.h  app_clipboard_policy.cpp  app_clipboard_policy.h  app_clipboard_reader.cpp  app_clipboard_reader.h  app_common.cpp  app_common.h  app_metrics.cpp  app_metrics.h  app_options.cpp  app_options.h  app_presentation_metrics.cpp  app_presentation_metrics.h  app_profile_text.cpp  app_profile_text.h  app_settings.cpp  app_settings.h  app_shortcuts.cpp  app_shortcuts.h  frameless_resize_filter.cpp  frameless_resize_filter.h  main.cpp  portable_launcher_win.c  qml_chrome.cpp  qml_chrome.h  terminal_scrollbar.cpp  terminal_scrollbar.h  terminal_settings_controller.cpp  terminal_settings_controller.h  terminal_settings_window.cpp  terminal_settings_window.h  terminal_title_metadata.h  terminal_window.cpp  terminal_window.h  vnm_terminal.icns  vnm_terminal_font.cpp  window_chrome.cpp  window_chrome.h  window_chrome_model.h
tests/: CMakeLists.txt  build_info_generation_tests.cmake  expect_capture_file.cmake  expect_capture_path_failure_preserves_file.cmake  expect_metrics_json.cmake  expect_metrics_timeline_jsonl.cmake  expect_process_result.cmake  selection_stress_repro_summary_tests.ps1
tests/behavior_smoke/: behavior_smoke_tests.cpp
tests/conformance/: README.md
tests/conformance/captures/: claude_utf8_title_payload.vnm_capture
tests/example_terminal/: custom_titlebar_integration_tests.cpp  window_chrome_item_tests.cpp  window_chrome_model_tests.cpp  window_chrome_resize_filter_tests.cpp
tests/phase0_parser_ir/: parser_ir_tests.cpp
tests/phase1_basic_model/: basic_model_tests.cpp
tests/phase1_model_ops/: model_ops_tests.cpp
tests/phase2_backend_session/: backend_session_tests.cpp
tests/phase2_linux_pty/: linux_pty_backend_tests.cpp
tests/phase2_windows_conpty/: windows_conpty_backend_tests.cpp
tests/phase3_qsg_render/: qsg_render_tests.cpp
tests/phase3r_qsg_text_node_spike/: qsg_text_node_spike_tests.cpp
tests/phase4_behavior_smoke/: behavior_smoke_tests.cpp
tests/phase4_surface_host/: surface_host_tests.cpp
tests/phase6_parser_randomized/: ascii_wrap_scroll.vnm_seed  control_sequence_title.vnm_seed  string_recovery_query.vnm_seed  utf8_wide_boundary.vnm_seed
tests/phase6_resource_lifecycle/: resource_lifecycle_tests.cpp
tests/terminal_app/: app_cli_tests.cpp  app_persistence_tests.cpp  app_presentation_metrics_tests.cpp  custom_titlebar_integration_tests.cpp  expect_process_clean.cmake  input_echo_timing_probe.cpp  terminal_title_metadata_tests.cpp  window_chrome_item_tests.cpp  window_chrome_model_tests.cpp  window_chrome_resize_filter_tests.cpp
tools/: create_source_archive.ps1  selection_stress_repro.ps1  synchronized_output_scroll_policy_repro.ps1  terminal_repro_common.ps1
